load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["blockstats.go", "epochstats.go", "service.go", "types.go", "validatorstats.go"],
    importpath = "github.com/prysmaticlabs/prysm/beacon-chain/attestant",
    visibility = ["//beacon-chain:__subpackages__"],
    deps = [
        "//beacon-chain/blockchain:go_default_library",
        "//beacon-chain/core/epoch:go_default_library",
        "//beacon-chain/core/helpers:go_default_library",
        "//beacon-chain/core/validators:go_default_library",
        "//beacon-chain/db:go_default_library",
        "//proto/beacon/p2p/v1:go_default_library",
        "//proto/eth/v1alpha1:go_default_library",
        "//shared/params:go_default_library",
        "@com_github_lib_pq//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["service_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//beacon-chain/blockchain/testing:go_default_library",
        "//beacon-chain/core/helpers:go_default_library",
        "//beacon-chain/db:go_default_library",
        "//beacon-chain/db/testing:go_default_library",
        "//proto/beacon/p2p/v1:go_default_library",
        "//proto/eth/v1alpha1:go_default_library",
        "//shared/params:go_default_library",
        "//shared/testutil:go_default_library",
        "@com_github_lib_pq//:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
        "@com_github_prysmaticlabs_go_bitfield//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_sirupsen_logrus//hooks/test:go_default_library",
    ],
)
