load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "blockstats.go",
        "epochstats.go",
        "networkstate.go",
        "service.go",
        "validatorstats.go",
    ],
    importpath = "github.com/prysmaticlabs/prysm/beacon-chain/attestant",
    visibility = ["//beacon-chain:__subpackages__"],
    deps = [
        "//beacon-chain/blockchain:go_default_library",
        "//beacon-chain/core/helpers:go_default_library",
        "//beacon-chain/core/statefeed:go_default_library",
        "//proto/beacon/p2p/v1:go_default_library",
        "//shared/params:go_default_library",
        "@com_github_lib_pq//:go_default_library",
        "@com_github_prysmaticlabs_ethereumapis//eth/v1alpha1:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
